syntax = "proto3";
option optimize_for = SPEED;
option java_outer_classname = "MyDataInfo";

message MyMessage {
    enum DataType {
        StudentType = 0;
        WorkerType = 1;
    }
    DataType data_type = 1;

    oneof dataBody {
        Student student = 2;
        Worker worker = 3;
    }
}
message Student {
    int32 id = 1;
    string name = 2;
}
message Worker {
    string name = 1;
    int32 age = 2;
}
//protoc.exe --java_out=. Student.proto




